<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sleepFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SleepFragment">

    <TextView
        android:id="@+id/tvSleep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/tvSleep1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guiaHorSleep1" />

    <TextView
        android:id="@+id/tvSleep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/tvSleep2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSleep1" />

    <Spinner
        android:id="@+id/spinnerMinutos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/tvSleep5"
        android:gravity="center"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guiaVerSleep2"
        app:layout_constraintStart_toStartOf="@+id/guiaVerSleep1"
        app:layout_constraintTop_toBottomOf="@+id/tvSleep2" />

    <TextView
        android:id="@+id/tvSleep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tvSleep4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorSleep5"
        app:layout_constraintEnd_toStartOf="@+id/tvSleep4"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMinutos" />

    <TextView
        android:id="@+id/tvSleep4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tvSleep5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorSleep5"
        app:layout_constraintEnd_toStartOf="@+id/tvSleep5"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMinutos" />

    <Button
        android:id="@+id/btnActivar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/btnSleep1"
        app:layout_constraintEnd_toStartOf="@+id/guiaVerSleep2"
        app:layout_constraintStart_toStartOf="@+id/guiaVerSleep1"
        app:layout_constraintTop_toTopOf="@+id/guiaHorSleep5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorSleep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorSleep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorSleep3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVerSleep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorSleep4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVerSleep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorSleep5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/tvSleep5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tvSleep3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorSleep5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMinutos" />

</androidx.constraintlayout.widget.ConstraintLayout>