<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentInicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FragmentPantalla1">


    <TextView
        android:id="@+id/tvEscucha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tvEscucha"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guiaTexto1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombreEmisora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EB330C"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tvEmisora"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guiaTexto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guiaTexto1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imagenPrincipal"
        android:scaleType="centerCrop"
        android:src="@drawable/medellin"
        app:layout_constraintBottom_toBottomOf="@id/guiaHorizontal1"
        app:layout_constraintDimensionRatio="0.1:0.066"
        app:layout_constraintEnd_toEndOf="@+id/guiaVertical2"
        app:layout_constraintStart_toStartOf="@+id/guiaVertical1"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreEmisora" />

    <ImageView
        android:id="@+id/icono1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/iconoolimpica"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorizontal3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guiaVertical3"
        app:layout_constraintStart_toStartOf="@+id/guiaVertical1"
        app:layout_constraintTop_toTopOf="@+id/guiaHorizontal2" />

    <ImageButton
        android:id="@+id/btnPlay_Pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:background="@drawable/estilos_boton"
        android:contentDescription="@string/btnPlayPause"
        android:scaleType="centerCrop"
        android:src="@drawable/play"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorizontal3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guiaVertical5"
        app:layout_constraintStart_toStartOf="@+id/guiaVertical4"
        app:layout_constraintTop_toTopOf="@+id/guiaHorizontal1" />

    <ImageView
        android:id="@+id/icono2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/iconoolimpicamed"
        app:layout_constraintBottom_toTopOf="@+id/guiaHorizontal3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guiaVertical2"
        app:layout_constraintStart_toStartOf="@+id/guiaVertical6"
        app:layout_constraintTop_toTopOf="@+id/guiaHorizontal2" />

    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guiaHorizontal4">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaTexto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaTexto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>